--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,31 +1,69 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');
+
+:root {
+  --primary: #4f46e5;
+  --purple-dark: #5E60CE;
+  --blue: #4EA8DE;
+  --blue-dark: #1E6F9F;
+
+  --gray-700: #0D0D0D;
+  --gray-600: #1A1A1A;
+  --gray-500: #262626;
+  --gray-400: #333333;
+  --gray-300: #808080;
+  --gray-200: #D9D9D9;
+  --gray-100: #f2f2f2;
+
+  --danger: #e25858;
+
+  --white: #ffff;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+
+  -webkit-font-smoothing: antialiased;
+  background: var(--white);
+
+
+}
+
+body,
+input,
+button,
+textarea {
+  font-family: 'Inter', sans-serif; 
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+button {
+  cursor: pointer;
+}
+
+
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Inter', sans-serif; 
   font-weight: 400;
-}
-
-body {
-  background: #76b852; /* fallback for old browsers */
-  background: rgb(141, 194, 111);
-  background: linear-gradient(
-    90deg,
-    rgba(141, 194, 111, 1) 0%,
-    rgba(118, 184, 82, 1) 50%
-  );
-  font-family: "Roboto", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  color: inherit;
-  text-decoration: underline;
-}
-
-* {
+  border: none;
   box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
+
